WIP Serbia focus tree
Done:
 - Domestic politics
 - Belgrade Pact
 - Economy
 - Army reform
 - Air

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -5496,7 +5496,7 @@ SER_syndicalist_DEF:0 "The Serbian Socialist Republic"
 SER_radical_socialist:0 "Serbian Socialist Republic"
 SER_radical_socialist_ADJ:0 "Serbian"
 SER_radical_socialist_DEF:0 "The Serbian Socialist Republic"
-SER_social_democrat:0 "Serbian Republic"
+SER_social_democrat:0 "Serbia"
 SER_social_democrat_ADJ:0 "Serbian"
 SER_social_democrat_DEF:0 "Serbia"
 SER_social_liberal:0 "Serbia"
