--- a/localisation/KR_Romania_l_english.yml
+++ b/localisation/KR_Romania_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Opinion Modifiers ###
+### Opinion modifiers ###
 ROM_supported_us_in_civil_war:0 "Supported us during the civil war"
 ROM_supported_the_other_side_in_civil_war:0 "Supported the enemy during the civil war"
 ROM_extradited_iron_guard:0 "Extradited Iron Guard"
@@ -19,7 +19,7 @@ serbian_romanian_alliance:0 "Serbian-Romanian Alliance"
 ROM_oltenia:0 "Re-militarisation of Oltenia"
 cuza_executed:0 " Executed"
 executed_iron_guard_leaders:0 " Executed Iron Guard leaders"
-ROM_unlocks_company:0 "Unlocks as company"
+ROM_unlocks_company:0 "Unlocks as company "
 
 ### Ideas ###
 ROM_purged_bucharest_circle:0 "Purged intellectuals"
@@ -39,11 +39,34 @@ ROM_invested_in_iar_desc:0 "The different airplane factories of Romania focus ea
 ROM_the_nai:0 "National Aeronautical Industry"
 ROM_the_nai_desc:0 "A combination of the SET and IAR factories, the National Aeronautical Industry coordinates the production of airplanes."
 
-### Foci ###
+### Companies ###
+malaxa:0 "Malaxa"
+universitatea_bucuresti:0 "Universitatea din Bucuresti"
+rafinaria_steaua_romana:0 "Rafinaria Steaua Romana"
+fabrica_de_arme_cugir:0 "Fabrica de Arme Cugir"
+udr:0 "UDR"
+caile_ferate_romane:0 "Caile Ferate Romane"
+leonida:0 "Leonida"
+industria_aeronautica_romana:0 "Industria Aeronautică Română"
+icar:0 "ICAR"
+fabrica_avioane_set:0 "Fabrica de Avioane SET"
+santierul_naval_constanta:0 "Şantierul Naval Constanţa"
+rrm_malaxa:0 "Malaxa"
+rrm_universitatea_bucuresti:0 "Universitatea din Bucuresti"
+rrm_rafinaria_steaua_romana:0 "Rafinaria Steaua Romana"
+rrm_fabrica_de_arme_cugir:0 "Fabrica de Arme Cugir"
+rrm_udr:0 "UDR"
+rrm_caile_ferate_romane:0 "Caile Ferate Romane"
+rrm_leonida:0 "Leonida"
+rrm_industria_aeronautica_romana:0 "Industria Aeronautică Română"
+rrm_icar:0 "ICAR"
+rrm_fabrica_avioane_set:0 "Fabrica de Avioane SET"
+rrm_santierul_naval_constanta:0 "Şantierul Naval Constanţa"
+
+### Focus Tree ###
 ROM_remilitarize_oltenia:0 "Re-militarise Oltenia"
 ROM_remilitarize_oltenia_desc:0 "Article XII of the Treaty of Bucharest forbids Romania to construct or maintain any fortifications or armed forces in Oltenia. It is time to bring an end to this situation."
-
-### Army Expansion ###
+### Army expansion
 ROM_army_expansion:0 "Expand the Army"
 ROM_army_expansion_desc:0 "Since the Iron Guard took power, we already violated the Treaty of Bucharest by introducing army conscription, where the treaty limited Romania to an army of 45,000 men. We need to further expand the army, to ensure a victory in future conflicts."
 ROM_infantry_weapons:0 "New Infantry Weapons"
@@ -62,8 +85,7 @@ ROM_mechanization_effort:0 "Mechanisation Effort"
 ROM_mechanization_effort_desc:0 "The army of the future does not solely consist of foot soldiers. We already have some motorised parts in our army, but a new type of mechanised vehicles will provide even more protection to our soldiers, while enabling them to move through rough terrain with ease."
 ROM_everything_for_the_country:0 "Everything for the Country"
 ROM_everything_for_the_country_desc:0 "The Romanian phrase Totul pentru Ţară, literally \"Everything for the Country\", is the official name of the Iron Guard. It's the duty of every Romanian to sacrifice himself for his country, and we need to remind the people of that."
-
-### Diplomatic ###
+### Diplomatic
 ROM_claim_transylvania:0 "Claim Transylvania"
 ROM_claim_transylvania_desc:0 "There lives a large Romanian minority in Transylvania, in some parts even a majority. We can press our claims on these parts and even extend our claim to include all of Transylvania and Banat."
 ROM_nationalize_oil_fields:0 "Nationalise the Oil Industry"
@@ -82,8 +104,7 @@ ROM_greater_romania_desc:0 "Now that all Romanians are finally united in one sta
 ROM_greater_romania_tooltip:0 "§GGains cores on all previously claimed territories that are now conquered.§!\n\n"
 ROM_extra_research_slot_ii:0 "Recruit New Scientists"
 ROM_extra_research_slot_ii_desc:0 "Our new territories have some large cities and house very smart people. We need to recruit among the population, especially among Romanians, to fuel our advances in R&D."
-
-### Party ###
+### Party
 ROM_cuib:0 "Establish Cuib"
 ROM_cuib_desc:0 "The Iron Guard is organised in chapters called cuib, or \"nest\", which are organised around the virtues of discipline, work, silence, education, mutual aid, and honour. We can expand these chapters so every working men knows his duty to his country."
 ROM_entrench_party:0 "Entrench Party"
@@ -97,8 +118,7 @@ ROM_crush_royalists_desc:0 "It is time to crush the Monarchists once and forever
 ROM_crush_royalists_tooltip:0 "Has won the civil war or averted it"
 ROM_rebuild_country:0 "Rebuild the Country"
 ROM_rebuild_country_desc:0 "The struggle for power with the supporters of the monarchy and other enemies of the republic has left us vulnerable. We need to rebuild our country and form a strong, cohesive society. For Romania!"
-
-### Industrial ###
+# Industrial
 ROM_ploiesti_refineries:0 "Expand the Ploiesti refineries"
 ROM_ploiesti_refineries_desc:0 "The oild fields of Ploiesti are one of the richest of Europe. While being leased to Germany under the obligations of the Treaty of Bucharest, we can further invest in the Ploiesti refineries with help of German and Austrian companies."
 ROM_refinery_bonus:0 "Investment in Ploiesti refineries"
@@ -114,8 +134,7 @@ ROM_dig_for_oil:0 "Dig for Oil"
 ROM_dig_for_oil_desc:0 "The Ploiesti oil fields, already one of the richest in Europe, may hold more oil than we thought before."
 ROM_extra_research_slot:0 "Extra Research Slot"
 ROM_extra_research_slot_desc:0 "Investments in industrial progress lead to advancements in the field of R&D."
-
-### Air ###
+# Air
 ROM_technical_development_society:0 "The Technical Development Society"
 ROM_technical_development_society_desc:0 "The Societatea Pentru Exploatări Technice, or Technical Development Society, is an aircraft plant in Bucharest specialized in developing new training aircraft. We need to expand its facilities to give them the capacity to help our air force grow."
 ROM_invest_in_iar:0 "Invest in IAR"
@@ -138,8 +157,7 @@ ROM_radar_effort:0 "Radar Effort"
 ROM_radar_effort_desc:0 "It is important to detect enemy planes. We need to develop RADAR capabilities to ensure early warning of enemy attacks."
 ROM_naval_bomber_effort:0 "Naval Bomber Effort"
 ROM_naval_bomber_effort_desc:0 "We need to develop more modern naval bombers to harass enemy shipping."
-
-### Naval ###
+# Naval
 ROM_expand_constanta_port:0 "Expand the Constanta port"
 ROM_expand_constanta_port_desc:0 "Constanta is an important port on the Black Sea, we need to expand it to allow for a larger navy."
 ROM_coastal_navy:0 "Coastal Navy"
@@ -208,9 +226,12 @@ RRM_paternal_autocrat_party_long:0 "Liga Apărării National Crestine"
 RRM_national_populist_party:0 "Garda de Fier"
 RRM_national_populist_party_long:0 "Garda de Fier"
 
-### Additional Party Names ###
+# Additional party names
 ROM_totul_pentru_tara:0 "TPT"
 ROM_totul_pentru_tara_long:0 "Totul Pentru Ţară"
+
+### Leader Descriptions ###
+POLITICS_CORNELIU_ZELEA_CODREANU_DESC:0 "The Conducător of Romania is the undisputed leader of the Iron Guard. A fanatic nationalist, he wants to restore Romania to its former greatness."
 
 ### Equipment ###
 ROM_EQUIPMENT_VERSION_1:0 "A"
@@ -233,9 +254,9 @@ ROM_EQUIPMENT_VERSION_16:0 "P"
 ROM_CAS_equipment_2:0 "IAR 81"
 ROM_CAS_equipment_2_short:0 "IAR 81"
 
-### Events ###
+### Event text ###
 romania.0.t:0 "[From.GetName]"
-romania.0.d:0 "Following the independence from the Ottoman Empire under King Carol in 1878 Romania began its slow process of modernisation and of turning to the west. In 1913 it entered the Second Balkan War, tipping the balance against Bulgaria and subsequently annexing southern Dobrogea from them.\n\nWith the outbreak of the Weltkrieg in 1914 Romania initially remained neutral but would join the Entente in 1916, led by Carol's successor Ferdinand. After a failed attempt to invade Transylvania, nearly 2/3 of the country was occupied by the Central Powers. Even though the army fought an effective defensive war from its last remaining holdout in Moldova, the government was forced, following the Russian collapse, to sign the Treaty of Bucharest in 1918. The southern part of Dobrogea was returned to Bulgaria, Oltenia was de-militarised, the oilfields were leased to Germany until 2008 and various other sectors of the economy became dominated by German and Austrian companies, with Romania getting the province of Bessarabia from the fallen Russian Empire in return.\n\nAfter the death of Ferdinand in 1927, the military managed to effectively seize the reigns of government, installing the 6 year old Michael, Ferdinand's grandson, as their puppet king, completely bypassing Carol II, the late king's disgraced son. Of the various groups which collaborated with the military, the right-wing Iron Guard, led by Corneliu Zelea Codreanu, proved the most dangerous. They managed to acquire more and more power within the state apparatus, eventually violently ousting the part of the military government still opposing them in 1935 and setting Codreanu up as the new Conducător, while the young king fled the country.\n\nCodreanu now rules over a divided nation, promising to restore Romania to its former greatness, throw off the shackles of its oppression and be rid of its enemies both foreign and domestic."
+romania.0.d:0 "Following the independence from the Ottoman Empire under King Carol in 1878 Romania began its slow process of modernisation and of turning to the west. In 1913 it entered the Second Balkan War, tipping the balance against Bulgaria and subsequently annexing southern Dobrogea from them.\n\nWith the outbreak of the Weltkrieg in 1914 Romania initially remained neutral but would join the Entente in 1916, led by Carol's successor Ferdinand. After a failed attempt to invade Transylvania, nearly 2/3 of the country was occupied by the Central Powers. Even though the army fought an effective defensive war from its last remaining holdout in Moldova, the government was forced, following the Russian collapse, to sign the Treaty of Bucharest in 1918. The southern part of Dobrogea was returned to Bulgaria, Oltenia was de-militarised, the oilfields were leased to Germany until 2012 and various other sectors of the economy became dominated by German and Austrian companies, with Romania getting the province of Bessarabia from the fallen Russian Empire in return.\n\nAfter the death of Ferdinand in 1927, the military managed to effectively seize the reigns of government, installing the 6 year old Michael, Ferdinand's grandson, as their puppet king, completely bypassing Carol II, the late king's disgraced son. Of the various groups which collaborated with the military, the right-wing Iron Guard, led by Corneliu Zelea Codreanu, proved the most dangerous. They managed to acquire more and more power within the state apparatus, eventually violently ousting the part of the military government still opposing them in 1935 and setting Codreanu up as the new Conducător, while the young king fled the country.\n\nCodreanu now rules over a divided nation, promising to restore Romania to its former greatness, throw off the shackles of its oppression and be rid of its enemies both foreign and domestic."
 romania.0.a:0 "A new future for Romania!"
 
 romania.1.t:0 "Nicolae Iorga"
@@ -259,7 +280,7 @@ romania.4.a:0 "Everything for the Fatherland!"
 romania.5.t:0 "Union Day" # same as romania.4
 
 romania.6.t:0 "The Re-militarisation of Oltenia"
-romania.6.d:0 "The Treaty of Bucharest of 1918 officially ended the Weltkrieg for Romania, but at a high cost. The nation was now dominated by German and Austrian industries, Oltenia was demilitarised, and the oil fields were leased to Germany up to the year 2008. The humiliation that the Romanians had to endure resulted in the nation devolving into a National Populist dictatorship, led by the Conducător - Corneliu Codreanu. Codreanu and his Iron Guard set out on a mission to restore Romania to what it should have been - a titan of the Balkans. The first major move conducted by the Conducător was the re-militarisation of Oltenia, a strategic region in Wallachia with lots of oil reserves and military industry. The Romanian military has already started a mass parade in Craiova to celebrate this success!"
+romania.6.d:0 "The Treaty of Bucharest of 1918 officially ended the Weltkrieg for Romania, but at a high cost. The nation was now dominated by German and Austrian industries, Oltenia was demilitarised, and the oil fields were leased to Germany up to the year 2012. The humiliation that the Romanians had to endure resulted in the nation devolving into a National Populist dictatorship, led by the Conducător - Corneliu Codreanu. Codreanu and his Iron Guard set out on a mission to restore Romania to what it should have been - a titan of the Balkans. The first major move conducted by the Conducător was the re-militarisation of Oltenia, a strategic region in Wallachia with lots of oil reserves and military industry. The Romanian military has already started a mass parade in Craiova to celebrate this success!"
 romania.6.a:0 "That treaty wasn't going to be permanent anyway."
 romania.6.b:0 "How dare they!"
 romania.6.c:0 "Guard the mountain passes!"
@@ -270,7 +291,7 @@ romania.7.d:0 "The members of the Bucharest Circle have spread the seeds of an a
 romania.7.a:0 "The traitors!"
 
 romania.8.t:0 "The Monarchists have rebelled"
-romania.8.d:0 "Under the influence of the Bucharest Circle an attempt to establish a Monarchist Romania, free from Iron Guard oppression, has been made in the north of the country."
+romania.8.d:0 "Under the influence of the Bucharest Circle an attempt to establish a Monarchist Romania, free from Iron Guard oppression, has been  made in the north of the country."
 romania.8.a:0 "Death to the traitors!"
 romania.8.b:0 "We will restore the monarchy!"
 
@@ -454,12 +475,12 @@ romania.45.tt1:0 "the people vote for union with Romania."
 romania.45.tt2:0 "the people vote to remain part of Bulgaria."
 
 romania.46.t:0 "Bulgaria refused the plebiscite!"
-romania.46.d:0 "The Bulgarian government doesn't want to give the people a chance to choose their destiny! What will we do?"
+romania.46.d:0 "The Bulgarian government doesn`t want to give the people a chance to choose their destiny! What will we do?"
 romania.46.a:0 "Send the army!"
 romania.46.b:0 "We can't do anything at the moment."
 
 romania.47.t:0 "Bulgaria rigs the plebiscite!"
-romania.47.d:0 "The government of Bulgaria has seen reason and agreed to give the people of Dobrudzha a plebiscite to determine whether they want to rejoin Romania. However, we have been informed that there are certain irregularities in the procedure which will probably result in a negative result of the plebiscite. What shall we do?"
+romania.47.d:0 "The government of Bulgaria has seen reason and agreed to give the people of Dobrudzha a plebiscite to determine whether they want to rejoin Romania.  However, we have been informed that there are certain irregularities in the procedure which will probably result in a negative result of the plebiscite. What shall we do?"
 romania.47.a:0 "Never mind, we shall await the results."
 romania.47.b:0 "How dare they? Send the army to reclaim Dobrudzha!"
 
@@ -490,7 +511,7 @@ romania.53.d:0 "The plebiscite has passed yesterday. Most of the population of D
 romania.53.a:0 "Great!"
 
 romania.54.t:0 "Romania claims Transnistria"
-romania.54.d:0 "The government of [From.GetNameDef] seeks further expansion of their borders, threatening our holdings in Transnistria!"
+romania.54.d:0 "The government of [From.GetName] seeks further expansion of their borders, threatening our holdings in Transnistria!"
 romania.54.a:0 "Outrageous!"
 
 romania.55.t:0 "Romania is defeated"
