--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -4,6 +4,68 @@
 #New Cosmetic tags
 ########################
 
+SER_republic_totalist:0 "Serbian Socialist Republic"
+SER_republic_totalist_ADJ:0 "Serbian"
+SER_republic_totalist_DEF:0 "The Serbian Socialist Republic"
+SER_republic_syndicalist:0 "Serbian Socialist Republic"
+SER_republic_syndicalist_ADJ:0 "Serbian"
+SER_republic_syndicalist_DEF:0 "The Serbian Socialist Republic"
+SER_republic_radical_socialist:0 "Serbian Socialist Republic"
+SER_republic_radical_socialist_ADJ:0 "Serbian"
+SER_republic_radical_socialist_DEF:0 "The Serbian Socialist Republic"
+SER_republic_social_democrat:0 "Serbian Republic"
+SER_republic_social_democrat_ADJ:0 "Serbian"
+SER_republic_social_democrat_DEF:0 "The Serbian Republic"
+SER_republic_social_liberal:0 "Serbian Republic"
+SER_republic_social_liberal_ADJ:0 "Serbian"
+SER_republic_social_liberal_DEF:0 "The Serbian Republic"
+SER_republic_market_liberal:0 "Serbian Republic"
+SER_republic_market_liberal_ADJ:0 "Serbian"
+SER_republic_market_liberal_DEF:0 "The Serbian Republic"
+SER_republic_social_conservative:0 "Serbian Republic"
+SER_republic_social_conservative_ADJ:0 "Serbian"
+SER_republic_social_conservative_DEF:0 "The Serbian Republic"
+SER_republic_authoritarian_democrat:0 "Serbian Republic"
+SER_republic_authoritarian_democrat_ADJ:0 "Serbian"
+SER_republic_authoritarian_democrat_DEF:0 "The Serbian Republic"
+SER_republic_paternal_autocrat:0 "Serbian Republic"
+SER_republic_paternal_autocrat_ADJ:0 "Serbian"
+SER_republic_paternal_autocrat_DEF:0 "The Serbian Republic"
+SER_republic_national_populist:0 "Serbian Republic"
+SER_republic_national_populist_ADJ:0 "Serbian"
+SER_republic_national_populist_DEF:0 "The Serbian Republic"
+
+SER_kingdom_totalist:0 "Serbian Socialist Republic"
+SER_kingdom_totalist_ADJ:0 "Serbian"
+SER_kingdom_totalist_DEF:0 "The Serbian Socialist Republic"
+SER_kingdom_syndicalist:0 "Serbian Socialist Republic"
+SER_kingdom_syndicalist_ADJ:0 "Serbian"
+SER_kingdom_syndicalist_DEF:0 "The Serbian Socialist Republic"
+SER_kingdom_radical_socialist:0 "Serbian Socialist Republic"
+SER_kingdom_radical_socialist_ADJ:0 "Serbian"
+SER_kingdom_radical_socialist_DEF:0 "The Serbian Socialist Republic"
+SER_kingdom_social_democrat:0 "Kingdom of Serbia"
+SER_kingdom_social_democrat_ADJ:0 "Serbian"
+SER_kingdom_social_democrat_DEF:0 "The Kingdom of Serbia"
+SER_kingdom_social_liberal:0 "Kingdom of Serbia"
+SER_kingdom_social_liberal_ADJ:0 "Serbian"
+SER_kingdom_social_liberal_DEF:0 "The Kingdom of Serbia"
+SER_kingdom_market_liberal:0 "Kingdom of Serbia"
+SER_kingdom_market_liberal_ADJ:0 "Serbian"
+SER_kingdom_market_liberal_DEF:0 "The Kingdom of Serbia"
+SER_kingdom_social_conservative:0 "Kingdom of Serbia"
+SER_kingdom_social_conservative_ADJ:0 "Serbian"
+SER_kingdom_social_conservative_DEF:0 "The Kingdom of Serbia"
+SER_kingdom_authoritarian_democrat:0 "Kingdom of Serbia"
+SER_kingdom_authoritarian_democrat_ADJ:0 "Serbian"
+SER_kingdom_authoritarian_democrat_DEF:0 "The Kingdom of Serbia"
+SER_kingdom_paternal_autocrat:0 "Kingdom of Serbia"
+SER_kingdom_paternal_autocrat_ADJ:0 "Serbian"
+SER_kingdom_paternal_autocrat_DEF:0 "The Kingdom of Serbia"
+SER_kingdom_national_populist:0 "Kingdom of Serbia"
+SER_kingdom_national_populist_ADJ:0 "Serbian"
+SER_kingdom_national_populist_DEF:0 "The Kingdom of Serbia"
+
 SYR_great_authoritarian_democrat:0 "Greater Syria"
 SYR_great_authoritarian_democrat_ADJ:0 "Syrian"
 SYR_great_authoritarian_democrat_DEF:0 "Greater Syria"
@@ -69,7 +131,7 @@ IND_EMP_totalist_DEF:0 "The Indian Empire"
 DEH_IND_market_liberalist:0 "India"
 DEH_IND_market_liberalist_ADJ:0 "Indian"
 DEH_IND_market_liberalist_DEF:0 "India"
-DEH_IND_national_populist:0 "India"	
+DEH_IND_national_populist:0 "India"
 DEH_IND_national_populist_ADJ:0 "Indian"
 DEH_IND_national_populist_DEF:0 "India"
 DEH_IND_paternal_autocratist:0 "India"
@@ -97,7 +159,7 @@ DEH_IND_totalist_DEF:0 "India"
 IND_market_liberalist:0 "India"
 IND_market_liberalist_ADJ:0 "Indian"
 IND_market_liberalist_DEF:0 "India"
-IND_national_populist:0 "India"	
+IND_national_populist:0 "India"
 IND_national_populist_ADJ:0 "Indian"
 IND_national_populist_DEF:0 "India"
 IND_paternal_autocratist:0 "India"
