updated BHC war events

--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -55,6 +55,8 @@ BHC_PRF_convert_faster:0 "Cores will be gained on the §Y[PRF.GetName]§!'s stat
 BHC_PRF_convert_slower:0 "Cores will be gained on the §Y[PRF.GetName]§!'s states more slowly\n"
 BHC_PRF_cores_1:0 "May now gain cores in §YBombay§! and §YAndhra§!\n"
 BHC_PRF_cores_2:0 "May now gain cores in §Y[PRF.GetName]§!'s princely states\n"
+BHC_shimla_uprising_successful:0 "A socialist uprising will successfully begin in §YShimla§!\n"
+BHC_kolhapur_uprising_successful:0 "A socialist uprising will successfully begin in §YKolhapur§!\n"
 
 ### Parties ###
 BHC_totalist_party:0 "Maximists"
@@ -363,6 +365,37 @@ beng.51.t:0 "Ho Chi Minh Arrives in Calcutta"
 beng.51.d:0 "Indochinese revolutionaries under the leadership of Nguyen Sinh Con, also known as Ho Chi Minh, has arrived this morning at the riverine port of Calcutta from Paris to establish their own government in exile there. The Bharatiya Commune government decided to support their independence movement against the German colonial rule in Southeast Asia - threatening the region's fragile stability, especially when the German economy is still trying to recover itself from the effects of Black Monday. Will Ho's struggle against colonialism succeed or not is a matter of the other day."
 beng.51.a:0 "Wonderful!"
 beng.51.b:0 "That's worrying!"
+beng.52.t:0 "Socialists of the North"
+beng.52.d:0 "We've received word from a number of socialist cells in the north that they are ready to move. The best place they can gather in any number is away from the cities, and a site in the mountains of Shimla has been selected. This would give the rebels a chance to open a second front with our enemies...but it comes with the chance the Dominion might discover our plans early and thus put us at a disadvantage. For good or ill, the moment the rebels begin to act, we will be at war."
+beng.52.a:0 "Make the attempt, no matter the risk"
+beng.52.b:0 "Abandon this scheming and declare war!"
+beng.53.t:0 "Failed Uprising in Shimla"
+beng.53.d:0 "We've received information of socialist rebels swarming to the remote province of Shimla, and managed to intercept them in time before they could gather in sufficient numbers to truly pose a threat. We've learned that the rebels were being directly organized by [BHC.GetNameDef], and - far worse than that - [BHC.GetNameDef] has plans to invade us, which the rebels were supposed to assist with. We must prepare ourselves for war."
+beng.53.a:0 "Then the time has come"
+beng.54.t:0 "Successful Uprising in Shimla"
+beng.54.d:0 "The socialist rebels managed to gather in Shimla without being detected by the Dominion or her allies. It is time for the war to begin!"
+beng.54.a:0 "Jai Hind!"
+beng.55.t:0 "Socialist Uprising in Shimla!"
+beng.55.d:0 "Even as [BHC.GetAdjective] troops cross our border, we have reports that a socialist uprising has begun in the remote mountains of Shimla - no doubt organized by [BHC.GetNameDef] itself, right under our noses, to give us a second front to fight. We will need to move quickly."
+beng.55.a:0 "Damned socialist bastards!"
+beng.56.t:0 "Socialists of the West"
+beng.56.d:0 "We've received word from a number of socialist cells in the west that they are ready to move. The best place they can gather in any number is away from the major cities, and a remote site in the hills of Kolhapur has been selected. This would give the rebels a chance to open a second front with our enemies...but it comes with the chance [PRF.GetNameDef] might discover our plans early and thus put us at a disadvantage. For good or ill, the moment the rebels begin to act, we will be at war."
+beng.56.a:0 "Make the attempt, no matter the risk"
+beng.56.b:0 "Abandon this scheming and declare war!"
+beng.57.t:0 "Failed Uprising in Kolhapur"
+beng.57.d:0 "We've received information of socialist rebels swarming to the province of Kolhapur, and managed to intercept them in time before they could gather in sufficient numbers to truly pose a threat. We've learned that the rebels were being directly organized by [BHC.GetNameDef], and - far worse than that - [BHC.GetNameDef] has plans to invade us, which the rebels were supposed to assist with. We must prepare ourselves for war."
+beng.57.a:0 "Then the time has come"
+beng.58.t:0 "Successful Uprising in Kolhapur"
+beng.58.d:0 "The socialist rebels managed to gather in Kolhapur without being detected by [PRF.GetNameDef] or her allies. It is time for the war to begin!"
+beng.58.a:0 "Jai Hind!"
+beng.59.t:0 "Socialist Uprising in Kolhapur!"
+beng.59.d:0 "Even as [BHC.GetAdjective] troops cross our border, we have reports that a socialist uprising has begun in the remote hills of Kolhapur - no doubt organized by [BHC.GetNameDef] itself, right under our noses, to give us a second front to fight. We will need to move quickly."
+beng.59.a:0 "Damned socialist bastards!"
+beng.60.t:0 "The Collapse of the Hyderabad Government"
+beng.60.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. Consequently, with the Nizam’s administration barely clinging onto power in the Deccan Plateau, intervention by Union forces could result in the complete disintegration of one of the two other rival governments. However, such an attack could be risky, given the fragile balance of power between the three successor states to the Raj."
+beng.60.a:0 "We shall liberate the working people of the Deccan!"
+beng.60.b:0 "This is no business of ours..."
+
 bengal.99.t:0 "Victory of the Bharatiya Commune"
 bengal.99.d:0 "Since the end of the Weltkrieg, the Indian sub-continent has been split into three sides: the loyalist remnants of the British Raj, the socialists of the Indian National Congress, and the reactionary Indian princes who rejected both sides. With the dust having finally settled, the socialists have proven triumphant and the Bharatiya Commune now rules unopposed over the region, setting itself up to become a preeminent world power once it recovers from the devastation of its civil war."
 bengal.99.a:0 "Jai Hind!"
