--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -41,6 +41,7 @@ DEH_PRF_war_declined:0 "[DEH.GetNameDef] declined to invade [PRF.GetNameDef]"
 DEH_BHC_war:0 "War between [DEH.GetNameDef] and [BHC.GetNameDef]"
 DEH_BHC_war_declined:0 "[DEH.GetNameDef] declined to invade [BHC.GetNameDef]"
 BHC_PRF_war:0 "War between [BHC.GetNameDef] and [PRF.GetNameDef]"
+BHC_PRF_war_declined:0 "[BHC.GetNameDef] declined to invade [PRF.GetNameDef]"
 DEH_becomes_india:0 "§Y[DEH.GetNameDef]§! will become §YIndia§!\n"
 DEH_released_BUR:0 "Released Burma"
 
