--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -778,7 +778,7 @@ STATE_775:0 "Steiermark"
 STATE_776:0 "Westpreussen"
 STATE_777:0 "Kattowitz"
 STATE_778:0 "Eupen-Malmedy"
-STATE_779:0 "Nancy"
+STATE_779:0 "Nanzig"
 STATE_780:0 "Saarland"
 STATE_781:0 "Western Rhineland"
 STATE_782:0 "Nordschleswig"
