--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -590,7 +590,7 @@ VICTORY_POINTS_11465:0 "Nantes"
 VICTORY_POINTS_11479:0 "Lwow"
 VICTORY_POINTS_11483:0 "Lille"
 VICTORY_POINTS_11506:0 "Paris"
-VICTORY_POINTS_11516:0 "Nancy"
+VICTORY_POINTS_11516:0 "Nanzig"
 VICTORY_POINTS_11519:0 "Liège"
 VICTORY_POINTS_11542:0 "Praha"
 VICTORY_POINTS_11544:0 "Nürnberg"
