--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -60,11 +60,11 @@ BHC_kolhapur_uprising_successful:0 "A socialist uprising will successfully begin
 
 ### Parties ###
 BHC_totalist_party:0 "Maximists"
-BHC_radical_socialist_party:0 "Moderates"
-BHC_syndicalist_party:0 "Agrarians"
+BHC_radical_socialist_party:0 "Agrarians"
+BHC_syndicalist_party:0 "Moderates"
 BHC_totalist_party_long:0 "Maximist Faction of Bharatiya"
-BHC_radical_socialist_party_long:0 "Moderate Faction of Bharatiya"
-BHC_syndicalist_party_long:0 "Agrarian Faction of Bharatiya"
+BHC_radical_socialist_party_long:0 "Agrarian Faction of Bharatiya"
+BHC_syndicalist_party_long:0 "Moderate Faction of Bharatiya"
 BHC_anarcho_syndicalist_party:0 "Anarcho-Syndicalists"
 BHC_anarcho_syndicalist_party_long:0 "Self-Culture Association of Bharatiya"
 
@@ -330,6 +330,32 @@ beng.16.d.resistance:0 "Our program to force the cultural elites to comply with 
 beng.16.d.incentive:0 "Our program to entice the cultural elites to comply with national reforms has, after a great deal of time and at considerable cost, finally met with success."
 beng.16.d.promotion:0 "Our program to cajole the cultural elites into supporting the national reforms has, after a great deal of time and at considerable cost, finally met with success."
 beng.16.a:0 "Now economic reforms can continue!"
+beng.17.t:0 "The Passing of Mohandas Karamchand Gandhi"
+beng.17.d:0 "Perhaps the greatest soul to walk the Earth since Christ is no more. The Mahatma passed away quietly in his sleep at the venerable age of 80. He is succeeded as leader of the Agrarian Wing by the young scholar Nirmal Kumar Bose."
+beng.17.a:0 "Fare thee well"
+beng.18.t:0 "The Passing of Rabindranath Tagore"
+beng.18.d:0 "A staunch friend of Gandhi and quite possibly the greatest scholar-poet India has seen in hundreds of years passed away late last night surrounded by his grieving family. His place amongst the Agrarians has been taken by the eminent peasant leader Panjabrao Deshmukh."
+beng.18.a:0 "He is now where the mind has no fear"
+beng.19.t:0 "The Passing of Madame Cama"
+beng.19.d:0 "One of the most diligent early Indian revolutionaries, Bhikhaiji Rustom Cama passed away today whilst recuperating from fever. Having unfurled the first Indian national flag at the Stuttgart International Socialist Conference in 1907, Madame Cama enjoyed great prestige amongst both domestic as well as international revolutionaries."
+beng.19.a:0 "We shall march on! Until all of India is free!"
+beng.20.t:0 "Nationalizing the Yenangyaung Oil Fields"
+beng.20.d:0 "The workers at the Yenangyaung Oil Fields were the primus motor of the recent Burmese revolution. Their strike against the capitalist system of robbery and oppression was what galvanized the latent dissatisfaction with the Konbaung dynasty into a fullscale uprising within both the military and the general populace. As the Burmese republic ascended to the Bhartiya Commune it now falls upon our government to determine how the means of production in Yenangyaung should be handled. The Anarcho-Syndicalist wing of the Indian National Congress argue that the local trade unions, being the true representatives of the local workers, ought to take full control of the oil fields. On the other hand, Bose's Maximists present a strong argument for complete state control and involvement in the day to day running of the plants. The government will have to make a clear decision to ensure the cooperation of our new Burmese comrades."
+beng.20.a:0 "Initiate a full national takeover of the Oil Fields!"
+beng.20.b:0 "Let the oil fields be run by the local trade unions"
+beng.20.c:0 "Maintain the status quo"
+beng.21.t:0 "Shripad Amrit Dange Reforms the Anushilan Samiti"
+beng.21.d:0 "At a local labour meeting in Calcutta close by Writer’s Building, Shripad Amrit Dange and several prominent veteran revolutionaries such as Atulkrishna Ghosh and M.N. Roy have proclaimed their intention to organize a truly syndicalist and militant revolutionary organisation within the dominant INC. Seeing both the Maximist and Agrarian wings as compromised and Fazlul Huq’s Moderates as corrupt, the group hopes to contest for commissary and delegate positions on the next round of elections to the government. Invoking the name old name ‘Anushilan Samiti’ (meaning ‘Self-Culture Association’) the group strongly advocates the use of force to overthrow the Hyderabad and Delhi governments as well as an economic system based on anarcho-syndicalist policies of cooperative farming and union controlled industries."
+beng.21.a:0 "Let's hope he aims those bombs at the reactionaries!"
+beng.22.t:0 "Nehru's Coup Against Fazlul Huq"
+beng.22.d:0 "At a preliminary meeting of the Moderates, Jawaharlal Nehru has openly challenged A. K. Fazlul Huq for leadership. The split comes as no surprise to the political observers of Calcutta as Nehru has grown more and more disillusioned by the Tiger’s singular preferable treatment of the Bengal. Hungry for the power needed to transform India along his own radicalized Fabian lines, Nehru launched a scathing attack on the elder Huq’s political dealings with Nehru-loyalists Lal Bahadur Shastri and Gulzarilal Nanda immediately following up with their own denouncements of the old weary course. Visibly shaken by the coup and clearly lacking support from the majority of the grouping, Huq grudgingly abdicated leadership of the clique in favour of Nehru, who then proceeded to purge anyone not voting in his favour."
+beng.22.a:0 "Will this weaken or strenghten the Industrialists?"
+beng.23.t:0 "A Most Cordial Letter to Mr. Mosley"
+beng.23.d:0 "In London, Oswald Mosley has, alongside a great number of revolutionary European dignitaries, proclaimed a new socialist doctrine uniting the most extreme and militant left-wing personalities of the continent behind the idea of Totalitarian Socialism. With its belief in an economy controlled by the state, the total involvement of the revolutionary vanguard in internal affairs and the importance of the state in preserving Socialism, Mosley’s new theses have greatly impressed Subhas Chandra Bose, the great martial hero of the Indian Revolution. However, Bose’s enthusiasm for this coordination of revolutionary ideology has greatly worried his opponents within the Calcutta Government. Nevertheless, Bose now sends his regards and support for this new doctrine to Comrade Mosley, stressing the need for cooperation between Calcutta and London in the proletarian struggle for the dissolution of the Capitalist system of murder and robbery."
+beng.23.a:0 "Maybe the Mahatma better watch out"
+beng.24.t:0 "Subhas Chandra Bose Sends his Regards"
+beng.24.d:0 "While the support of Mussolini and Valois cemented Mosley’s new proletarian doctrine in Europe, news that the hero of the Indian Revolution, Subhas Chandra Bose, has endorsed the idea of Totalitarian Socialism really strengthened Mosley’s appeal within the British Union. Bose, who almost crushed the imperialists in 1926, is almost seen as a idolized figure of the revolution in the Far East and, as such, his opinion is highly regarded by many. Regardless, the notion of India and Britain, united as proletarian brothers instead of colonial master and slave has caught the people’s fancy."
+beng.24.a:0 "India and Britain, revolutionary brothers!"
 beng.40.t:0 "The Anglo-Indian Trade Agreement"
 beng.40.d:0 "A most interesting proposal has just been wired to the officials at the Foreign Office by our consulate staff in Calcutta. In the midst of increasingly worrying development in the other Indian successor states to the imperialist Raj, our good friends and proletarian brothers in [From.GetNameDef] are proposing a final economic deal to strengthen the backbone of their otherwise wobbly government with technical and industrial advisors from our British Union. In exchange, the workingman of Britain will receive a steady supply of bananas, tea and other exotic goods while his benevolent government gains access to vital resources such as rubber. R.H. Tawney, a seasoned politician with solid socialist credentials and good connections with Congress cadres in India from the early days of our Union, awaits the acceptance of London before boarding a ship to Calcutta to flesh out the deal."
 beng.40.a:0 "R.H. Tawney sails for Calcutta once more!"
@@ -395,7 +421,6 @@ beng.60.t:0 "The Collapse of the Hyderabad Government"
 beng.60.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. Consequently, with the Nizam’s administration barely clinging onto power in the Deccan Plateau, intervention by Union forces could result in the complete disintegration of one of the two other rival governments. However, such an attack could be risky, given the fragile balance of power between the three successor states to the Raj."
 beng.60.a:0 "We shall liberate the working people of the Deccan!"
 beng.60.b:0 "This is no business of ours..."
-
 bengal.99.t:0 "Victory of the Bharatiya Commune"
 bengal.99.d:0 "Since the end of the Weltkrieg, the Indian sub-continent has been split into three sides: the loyalist remnants of the British Raj, the socialists of the Indian National Congress, and the reactionary Indian princes who rejected both sides. With the dust having finally settled, the socialists have proven triumphant and the Bharatiya Commune now rules unopposed over the region, setting itself up to become a preeminent world power once it recovers from the devastation of its civil war."
 bengal.99.a:0 "Jai Hind!"
@@ -498,3 +523,53 @@ beng.121.a:0 "It's about time!"
 beng.122.t:0 "Resistance in [damage_state.GetName]!"
 beng.122.d:0 "Protests in the formerly princely state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a reactionary resistance group operating out of remote regions in the hinterlands. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
 beng.122.a:0 "No doubt funded with princely wealth..."
+beng.125.t:0 "A Special Session of the INC"
+beng.125.d:0 "The constitutionally mandated 5-year term of the incumbent executive committee has come to an end, marking the begining of a new round of political skull-duggery and backstabbing as the various factions vie for control over congress. Calcutta is draped in the red flag of Free India and the streets are alive with the sounds of exicetement."
+beng.125.a:0 "Let's get to work, comrades!"
+beng.126.t:0 "The Judicial Reform Act"
+beng.126.d:0 "In the wake of Indian reunification under the aegis of the Calcutta government, a major source of discontent across the subcontinent has proven to be the lack of central direction of the judicial system. With some provinces and districts being in the hands of local workers’ and peasants’ committees and others still ruling based on the old colonial codes, the Congress is in agreement that a more effective and streamlined legal apparatus is sorely needed. However, how such a system precisely should function - and who should control it - is hotly debated by all."
+beng.126.a:0 "All within the state, nothing against the state"
+beng.126.b:0 "A decentralized three-tier system for each province"
+beng.126.c:0 "A strong supreme court is needed to secure our liberty"
+beng.126.e:0 "A league of union tribunals should do the trick"
+beng.127.t:0 "The States and the Central Government"
+beng.127.d:0 "Five years have passed since the States Reorganization Act was adopted by Congress, yet friction still exists between the provinces and the central government as to who should wield the most influence in the villages and cities of India. The Maximists wish the states to be completely subjugated to the rulings of the executive, only retaining insignificant administrative power. The Agrarian Wing, on the contrary, argues the complex nature of the Indian nation calls for a loose confederation of states with the executive only permitted supreme control of defense matters and All-Indian industries. Dange’s Anarcho-Syndicalists share the mistrust of a strong central government, but suggest creating a coordinating States Committee elected by local trade unions to ensure some coherence amongst India’s provinces. Nehru proposes a quasi-federal structure with each province retaining a token legislative as well as chief ministers and governors, who in turn answer to the central government."
+beng.127.a:0 "The states must submit to the central government!"
+beng.127.b:0 "A loose confederation of autonomous states"
+beng.127.c:0 "A quasi-federal structure shall secure our liberty"
+beng.127.e:0 "A decentralized structure under a States Committee"
+beng.128.t:0 "The Industrial Policy Resolution Act"
+beng.128.d:0 "Industrial development has been a major focus for most of the congress factions (as even the Agrarians recognize the need for some heavy industry), but the question of which course is the right for our nation’s industrial sector is as hotly contended as ever."
+beng.128.a:0 "All layers of the economy must be centrally administered"
+beng.128.b:0 "India must become completely self-sufficient"
+beng.128.c:0 "Central planning and nationalization of vital industries"
+beng.128.e:0 "Orthodox Syndicalism shall unite all Indians economically"
+beng.129.t:0 "The Case of Our Foreign Obligations"
+beng.129.d:0 "The Revolution might have triumphed in India and heralded in a new era of Socialist brotherhood under the aegis of the Red Raj, but the world is still plagued by the twin evils of the possessing classes - feudalism and capitalism. Although we already have a significant diplomatic presence abroad, the issue of our commitment to the international welfare of the Syndicalist system has come up as an important point in today’s debates. As usual, the most glaring difference is between the Agrarians and the Maximists, with the former advocating a peaceful promotion of Socialism within India, while the latter argue bellicosely for the revolution to be promoted abroad at bayonet point. Dange and Nehru occupy a middle position."
+beng.129.a:0 "Totalists of the World, unite!"
+beng.129.b:0 "We should strive for peaceful co-existence"
+beng.129.c:0 "The Red Raj has a duty to defend the workers of Asia"
+beng.129.e:0 "Internationalism and cross-national workers' cooperation"
+beng.130.t:0 "The Case of Military Restructuring"
+beng.130.d:0 "Although the Indian Red Army was successful in its charge to secure the reunification of the subcontinent under the control of the Calcutta Government, it has become a too-rigid organization with conflicting loyalties. Always distrusting of too-centrally controlled authority, both Dange’s Syndicalists and the Agrarians argue for a gradual demobilisation and a thorough democratization of the armed forces, Dange even going so far as to call for democratically-elected officers chosen by the servicemen’s trade unions. Both Nehru and the Totalists believe in a strong army, but the former places far more emphasis on reforming and upgrading the existing equipment, while the Totalists wish to expand all three service branches while also enforcing a strict hierarchical command structure with full military discipline."
+beng.130.a:0 "Expand the army and enforce strict discipline"
+beng.130.b:0 "Promote volunteer service in a national militia"
+beng.130.c:0 "We must focus on reforming our armed forces"
+beng.130.e:0 "Liberalize and democratize the armed forces"
+beng.131.t:0 "Maximists Control Congress"
+beng.131.d:0 "As the special session of the INC concludes, a clear majority has gathered around the arguments of the Maximists. With support affirmed from Congress, the Maximists now stand ready to defend the republic against all foes!"
+beng.131.a:0 "The State shall persevere and flourish!"
+beng.132.t:0 "Jawaharlal Nehru Seizes Congress"
+beng.132.d:0 "Finally in control of the Moderates faction, Nehru has crowned his political success with having his party line endorsed by a majority of congress."
+beng.132.a:0 "This is our Tryst With Destiny!"
+beng.133.t:0 "The Agrarians Control Congress"
+beng.133.d:0 "To the roaring applause of the Congress, the wing supporting the ideals of the Mahatma has managed to secure support for its line by the party. Throughout rural India, the hope is that the new cabinet will secure peace and prosperity from Karachi to Calcutta."
+beng.133.a:0 "Our great nation shall be healed by the mercy of the victors"
+beng.134.d:0 "Dange's Syndicalists Control Congress"
+beng.134.t:0 "With his solid base of support in the Indian trade unions and a clever political alliance with the old revolutionary guard, Shripad Amrit Dange has managed to rally congress behind his anarcho-syndicalist platform. Now it is time to restore Mother India to her rightful place of glory by the means of true socialist liberation!"
+beng.134.a:0 "Now we're truly an anarcho-syndicalist commune!"
+beng.135.t:0 "The Congress Ends in a Stalemate"
+beng.135.d:0 "Despite the debates going into the early hours, Congress has not yet found a single majority. It would appear that only some sort of coalition between the various fractions can lead to a working government. In this regard, Nehru might be the king-maker – as he stands comfortably between the extremes of the INC."
+beng.135.a:0 "Nehru forms a coalition with the Maximists!"
+beng.135.b:0 "Nehru convinces the Agrarians to support his platform!"
+beng.135.c:0 "Nehru utilizes Dange's union support to take the presidency!"
