Fengtian tree work (localization and stuff coming tomorrow)

--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -809,7 +809,7 @@ FNG_support_weapons4:0 "Type 1 HMG & Type 2 12 cm Mortar"
 
 #Motorised
 
-FNG_motorized_equipment_1:0 "Type 94"
+FNG_motorized_equipment_1:0 "Mingsheng"
 FNG_mechanized_equipment_1:0 "Type 1 Ho-Ki"
 FNG_mechanized_equipment_1_short:0 "Type 1 Ho-Ki"
 FNG_mechanized_equipment_2:0 "Type 1 Ho-Ha"
