--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -652,6 +652,13 @@ fengtian.new.59.a:0 "Prioritize exports"
 fengtian.new.59.b:0 "Army first!"
 fengtian.new.59.c:0 "A mixed approach is best"
 
+fengtian.new.60.t:0 "Mantetsu Chosabū"
+fengtian.new.60.d:0 "INSERT"
+fengtian.new.60.a:0 "Radar"
+fengtian.new.60.b:0 "Construction"
+fengtian.new.60.c:0 "Production Efficiency"
+fengtian.new.60.d:0 "Decryption"
+
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
