--- a/localisation/KR_Afrika_flavour_l_english.yml
+++ b/localisation/KR_Afrika_flavour_l_english.yml
@@ -29,3 +29,7 @@ afro.6.a:0 "The Sultan is dead! Long live the Sultan!"
 afro.7.t:0 "H.R.M. Ranavalona IV passed away"
 afro.7.d:0 "The Queen of Madagaskar Ranavalona IV christened Marie-Louise Ranavalo passed away today. Her nephew Andriamanantena Paul Razafinkarefo has become King as Andriamanantena I."
 afro.7.a:0 "She will be missed!"
+
+afro.8.t:0 "Mustafa Kemal Pasha dies"
+afro.8.d:0 "Mustafa Kemal, the hero of Gallipoli, died today. He wasn't just a capable general, but also an agent of reform in the conservative empire. At one point he was even considered for the post of Grand Vizier, but suspected republican sympathies prevented the career move from general to statesman."
+afro.8.a:0 "A great Turk died."
