--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -338,7 +338,7 @@ STATE_335:0 "Java"
 STATE_336:0 "Singapur"
 STATE_337:0 "Faroe Islands"
 STATE_338:0 "Gloucestershire"
-STATE_339:0 "Izmir"
+STATE_339:0 "İzmir"
 STATE_340:0 "Bursa"
 STATE_341:0 "Edirne"
 STATE_342:0 "Antalya"
@@ -773,7 +773,7 @@ STATE_770:0 "Ploven"
 STATE_771:0 "Varna"
 STATE_772:0 "Dobrogea"
 STATE_773:0 "Kostantiniyye"
-STATE_774:0 "Izmit"
+STATE_774:0 "İzmit"
 STATE_775:0 "Steiermark"
 STATE_776:0 "Westpreussen"
 STATE_777:0 "Kattowitz"
