More Austria progress, less Kallar silliness

--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -5,14 +5,17 @@
 ### Greater Austrian Empire Stuff ###
 
 ### Flags and Tooltips ###
+AUS_dualism:0 "While the Magyars will be happy with this direction, §Rthis may lead to a civil war in Cisleithania.§W\n\n"
+AUS_centralism:0 "Restoring absolute power of the Austrian Crown §Rwill very possibly lead to a civil war.§W\n\n"
+AUS_pluralism:0 "The Magyars will be happy with this direction, §Rthis may lead to a civil war with them.§W\n\n"
 AUS_HUN_Civil_war:0 "§YHungary§W will start a civil war against us. \n\n"
 greater_austrian_empire:0 "Has decided to unite the Dual Monarchy under Austrian rule during the Ausgleich, and Hungary has been subdued.\n\n OR \n\nAustria has defeated Hungary (and annexed Budapest) and decided to centralise in the past war negotiations."
-AUS_racial_revolts_fired:0 "The racial revolts have not escalated."
-AUS_racial_tensions_solved:0 "The racial Tensions have calmed down."
-AUS_racial_tensions_evolve:0 "§Y Racial Tension§W will erupt all across our lands."
-AUS_horthy_apeared:0 "A new face has appeared in the racial conflicts. §YMiklós Horthy§W shows up to lead the Hungarian liberation movement. \n\n"
-AUS_prowlers_apeared:0 "§YProwlers§W are gathering in the Transsylvanian Woods."
-AUS_tensions_calm_down:0 "The§Y Racial Tensions§W have calmed down. The Empire is secure again."
+AUS_racial_revolts_fired:0 "The Ethnic Tensions have not escalated."
+AUS_racial_tensions_solved:0 "The Ethnic Tensions have calmed down."
+AUS_racial_tensions_evolve:0 "§Y Ethnic Tension§W will erupt all across our lands."
+AUS_horthy_apeared:0 "A new face has appeared in the ethnic conflicts. §YMiklós Horthy§W shows up to lead the Hungarian liberation movement. \n\n"
+AUS_prowlers_apeared:0 "§YProwlers§W are gathering in the Transylvanian Woods."
+AUS_tensions_calm_down:0 "The§Y Ethnic Tensions§W have calmed down. The Empire is secure again."
 AUS_tensions_nothing:0 "Nothing will happen."
 AUS_unlock_daimler:0 "Unlocks the §YAustro Daimler§W Company. \n\n"
 AUS_unlock_skoda:0 "Unlocks the §YŠkoda§W Company. \n\n"
@@ -20,12 +23,12 @@ AUS_italy_friend:0 "Has decided to befriend Italy and Italy has accepted the pro
 AUS_italy_force:0 "Italy has not accepted our Bonds."
 AUS_italy_bond:0 "Austro-Italian Friendship"
 AUS_italy_rival:0 "Austro-Italian Rivalry"
-AUS_not_fully_implement:0 "§RThis path is not yet fully implemented. Use with caution.§W \n\n"
+AUS_not_fully_implemented:0 "§RThis path is not yet fully implemented. Use with caution.§W \n\n"
 AUS_unlock_phoenix:0 "Will unlock the §YPhönix§W Air Company.\n\n"
-AUS_unlock_pintsch:0 "Will unlock the §YPintsch§W as a theorist.\n\n"
-AUS_unlock_bayer:0 "Will unlock the §YBayer§W synthetic Company.\n\n"
+AUS_unlock_pintsch:0 "Will unlock §YPintsch§W as a theorist.\n\n"
+AUS_unlock_bayer:0 "Will unlock the §YBayer§W Synthetic Company.\n\n"
 AUS_italy_friend_planed:0 "Has not decided to conquer Italy."
-AUS_stops_italian_revolts:0 "Will stop the §YItalian Revolts§W from causing to much trouble in the future."
+AUS_stops_italian_revolts:0 "Will stop §YItalian Revolts§W from causing too much trouble in the future."
 AUS_unlock_bayer:0 "Will unlock the §YBayer§W Synthetic Company.\n\n"
 AUS_italy_friend_planed:0 "Has decided not to conquer Italy."
 
@@ -126,7 +129,7 @@ AUS_bayer:0 "Bayer Österreich"
 AUS_research_expanded:0 "Funds for the Vienna Circle"
 AUS_centralize:0 "The new Austrian lands"
 AUS_italy:0 "The Italian Question"
-AUS_italy_peacefull:0 "Italian Bonds"
+AUS_italy_peaceful:0 "Italian Bonds"
 AUS_italy_military:0 "Conquer Italy"
 AUS_unify_italy:0 "Unify the Italian Lands"
 AUS_strong_italy:0 "Strengthen the Italian Empire"
