Magyars no longer so happy that they'll declare war on you

--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -7,7 +7,7 @@
 ### Flags and Tooltips ###
 AUS_dualism:0 "While the Magyars will be happy with this direction, §Rthis may lead to a civil war in Cisleithania.§W\n\n"
 AUS_centralism:0 "Restoring absolute power of the Austrian Crown §Rwill very possibly lead to a civil war.§W\n\n"
-AUS_pluralism:0 "The Magyars will be happy with this direction, §Rthis may lead to a civil war with them.§W\n\n"
+AUS_pluralism:0 "The Magyars will be unhappy with this direction, §Rthis may lead to a civil war with them.§W\n\n"
 AUS_HUN_Civil_war:0 "§YHungary§W will start a civil war against us. \n\n"
 greater_austrian_empire:0 "Has decided to unite the Dual Monarchy under Austrian rule during the Ausgleich, and Hungary has been subdued.\n\n OR \n\nAustria has defeated Hungary (and annexed Budapest) and decided to centralise in the past war negotiations."
 AUS_racial_revolts_fired:0 "The Ethnic Tensions have not escalated."
